@startuml
class CarViewController {
    <<const>> - MissionStateKey : string = "SubState"
    - Awake() : void
    - Start() : void
    - OnDisable() : void
    +  <<event>> ReloadedEvent : Action 
    - SetMissions(missions:IEnumerable<MissionSo>) : void
    - LoadMission(mission:MissionSo) : void
    - CompleteMission() : void
    - SwitchSubStateView(obj:IListItemData) : void
}
class "ListController`1"<T> {
}
MonoBehaviour <|-- CarViewController
CarViewController --> "itemTemplate" VisualTreeAsset
CarViewController --> "_actionListController<MissionSubState>" "ListController`1"
CarViewController --> "_carListController<MissionSo>" "ListController`1"
CarViewController --> "_confirmButton" Button
CarViewController --> "_csvLogger" CSVLogger
CarViewController --> "_mainImage" Image
CarViewController --> "_mapImage" Image
@enduml
